fixed alignment issue

--- a/src/app/pages/app-content/app-config/add-attendees/add-attendees.component.css
+++ b/src/app/pages/app-content/app-config/add-attendees/add-attendees.component.css
@@ -3,6 +3,7 @@
     overflow: hidden;
     margin: 10px;
 }
+
 .fileUpload input.upload {
     position: absolute;
     top: 0;
@@ -13,4 +14,8 @@
     cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0);
+}
+
+.mat-input-flex.mat-form-field-flex {
+    height: 36px;
 }
